Cleaned up button animation and spacing issues on landing page. Modified styling.

--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,12 @@
 body {
+  font-family: "Questrial", serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   height: 100%;
+  background-color: #2baf90;
 }
 
 .ingredients {
   position: absolute;
-}
-
-.left-container {
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  background-color: #f2782c;
-
-  @media (min-width: 768px) {
-    float: left;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    width: 50%;
-  }
-}
-
-.right-container {
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  background-color: #f2782c;
-
-  @media (min-width: 768px) {
-    float: right;
-    right: 0;
-    top: 0;
-    height: 100vh;
-    width: 50%;
-  }
 }
